<resources>
    <string name="app_name">Currency Converter</string>
    <string name="currencyconverter">CHF Converter</string>
    <string name="money"></string>
    <string name="convert">Convert</string>
    <string name="converted_currency">Convert your Currency</string>
    <string name="copyright">Designed and created by Mohamed El Saidi</string>

    <string-array name="currencies">
        <item>EUR - Euro</item>
        <item>USD - US Dollar</item>
        <item>GBP - Pound</item>
    </string-array>
</resources>